Fix bug #52786 (PHP should reset section to [PHP] after ini sections). Patch by Fedora at famillecollet dot com.